# safe-docs-ai

./: README.MD
safe-docs-ai/: .gitignore  README.md  pyproject.toml
safe-docs-ai/exntension/: background.js  content.js  manifest.json  popup.html  popup.js
safe-docs-ai/extension/: background.js  content.js  popup.html  popup.js
safe-docs-ai/safe_docs_ai/: main.py
safe-docs-ai/safe_docs_ai/app/: image_redactor.py  main.py  prompts.py  redactor.py  schemas.py  utils.py
