[tool.poetry]
name = "safe-docs-ai"
version = "0.1.0"
description = ""
authors = ["Aayush Kumar <aayush.kumar_c@equipmentshare.com>"]
packages = [{ include = "safe_docs_ai" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.25"
openai = "^1.86.0"
python-dotenv = "^1.0.1"
pytesseract = "^0.3.10"
pillow = "^10.3.0"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
