[tool.poetry]
name = "safe-docs-ai"
version = "0.1.0"
description = ""
authors = ["Aayush Kumar <aayush.kumar_c@equipmentshare.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.25"
openai = "^1.86.0"
fastapi = "^0.115.12"
pydantic = "^2.11.5"
uvicorn = "^0.34.3"
python-dotenv = "^1.1.0"
pytesseract = "^0.3.10"
langchain-community = "^0.3.25"
langchain-openai = "^0.3.22"

[tool.poetry.scripts]
serve = "safe_docs_ai.app.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
